--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "./frontend",
+    "public": "frontend/build",
     "ignore": [
       "firebase.json",
       "**/.*",
