--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.firebase
+.firebaserc
+firebase.json
 
 npm-debug.log*
 yarn-debug.log*
